--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="favicon.ico">
     <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Седона</title>
 </head>
 
 <body class="page__body page__body-inner">
     <header class="page-header">
-        <div class="help">
+        <div class="page-header__top">
             <a class="page-header__logo" href="index.html">
                 <img src="img/logotype-mobile.png" alt="Главный логотип">
             </a>
@@ -37,16 +38,17 @@
             </nav>
         </div>
 
-        <section class="header-content header-content__inner">
+        <section class="header-content header-inner">
             <h2 class="visually-hidden">Welcome to the gardeous Sedona</h2>
-            <img class="header-content__inner-img" src="img/sedona.svg" width="229" height="39" alt="sedona">
+            <img class="header-inner__img" src="img/sedona.svg" width="229" height="39" alt="sedona">
         </section>
     </header>
+
     <main class="page-main inner-main">
         <h1 class="visually-hidden">Страница галерии и видео</h1>
-        <header class="page-main__header">
-            <h3 class="page-main__header-heading">Фото и видео</h3>
-            <p class="page-main__header-text text">Не можете решится на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+        <header class="main-header">
+            <h3 class="main-header__heading">Фото и видео</h3>
+            <p class="main-header__text text">Не можете решится на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
         </header>
 
         <section class="gallery">
@@ -62,11 +64,16 @@
                                 <img class="gallery__img" src="img/gallery-img-mobile-1.jpg" srcset="img/gallery-img-mobile-1@2x.jpg 2x" width="280" height="280" alt="Картинка неродные просторы">
                             </picture>
                         </a>
-                        <figcaption class="gallery-figcaption">Неродные просторы</figcaption>
+                        <div class="gallery__footer">
+                            <div class="gallery__description">
+                                <figcaption class="gallery__figcaption">Неродные просторы</figcaption>
+                                <p class="gallery__autor">Автор фото: <cite class="gallery__autor-name">Борис</cite></p>
+                            </div>
+                            <p class="gallery__like">1350</p>
+                        </div>
                     </figure>
-                    <p class="gallery__autor">Автор фото: <cite class="gallery__autor-name">Борис</cite></p>
-                    <p class="gallery__like">1350</p>
                 </article>
+
                 <article class="gallery__item">
                     <h3 class="visually-hidden gallery__item-heading">Секция картинки Местная растительность</h3>
                     <figure class="gallery__figure">
@@ -77,11 +84,16 @@
                                 <img class="gallery__img" src="img/gallery-img-mobile-2.jpg" srcset="img/gallery-img-mobile-2@2x.jpg 2x" width="280" height="280" alt="Картинка Местная растительность">
                             </picture>
                         </a>
-                        <figcaption class="gallery-figcaption">Местная растительность</figcaption>
+                        <div class="gallery__footer">
+                            <div class="gallery__description">
+                                <figcaption class="gallery__figcaption">Местная растительность</figcaption>
+                                <p class="gallery__autor">Автор фото: <cite class="gallery__autor-name">Сергей</cite></p>
+                            </div>
+                            <p class="gallery__like">143</p>
+                        </div>
                     </figure>
-                    <p class="gallery__autor">Автор фото: <cite class="gallery__autor-name">Сергей</cite></p>
-                    <p class="gallery__like">143</p>
                 </article>
+
                 <article class="gallery__item">
                     <h3 class="visually-hidden gallery__item-heading">Секция картинки Дорога на север</h3>
                     <figure class="gallery__figure">
@@ -92,11 +104,16 @@
                                 <img class="gallery__img" src="img/gallery-img-mobile-3.jpg" srcset="img/gallery-img-mobile-3@2x.jpg 2x" width="280" height="280" alt="Картинка дорога на север">
                             </picture>
                         </a>
-                        <figcaption class="gallery-figcaption">Дорога на север</figcaption>
+                        <div class="gallery__footer">
+                            <div class="gallery__description">
+                                <figcaption class="gallery__figcaption">Дорога на север</figcaption>
+                                <p class="gallery__autor">Автор фото: <cite class="gallery__autor-name">Петр</cite></p>
+                            </div>
+                            <p class="gallery__like">96</p>
+                        </div>
                     </figure>
-                    <p class="gallery__autor">Автор фото: <cite class="gallery__autor-name">Петр</cite></p>
-                    <p class="gallery__like">96</p>
                 </article>
+
                 <article class="gallery__item">
                     <h3 class="visually-hidden gallery__item-heading">Секция картинки Мост дьвола</h3>
                     <figure class="gallery__figure">
@@ -107,36 +124,70 @@
                                 <img class="gallery__img" src="img/gallery-img-mobile-4.jpg" srcset="img/gallery-img-mobile-4@2x.jpg 2x" width="280" height="280" alt="Картинка мост дьявола">
                             </picture>
                         </a>
-                        <figcaption class="gallery-figcaption">Мост дьвола</figcaption>
+                        <div class="gallery__footer">
+                            <div class="gallery__description">
+                                <figcaption class="gallery__figcaption">Мост дьвола</figcaption>
+                                <p class="gallery__autor">Автор фото: <cite class="gallery__autor-name">Антон</cite></p>
+                            </div>
+                            <p class="gallery__like">254</p>
+                        </div>
+
                     </figure>
-                    <p class="gallery__autor">Автор фото: <cite class="gallery__autor-name">Антон</cite></p>
-                    <p class="gallery__like">254</p>
+
                 </article>
             </div>
         </section>
+
         <section class="video">
             <div class="video__content">
                 <h2 class="video__heading">Все еще сомневаетесь?</h2>
-                <p class="video__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной рас!</p>
+                <p class="video__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
             </div>
-            <iframe width="320" height="201" src="https://www.youtube.com/embed/_qHjLngt7OI" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video__iframe">
+                <picture>
+                    <source media="(min-width: 1200px)" srcset="img/video-desktop.jpg 1x, img/video-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="img/video-tablet.jpg 1x, img/video-tablet@2x.jpg 2x">
+                    <img class="video__photo" src="img/video-mobile.jpg" srcset="img/video-mobile@2x.jpg 2x" width="320" height="201" alt="Видео">
+                </picture>
+                <div class="video__player">
+                    <svg class="video__replay" width="16" height="20" viewBox="0 0 16 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M8 4V0L3 5L8 10V6C11.3 6 14 8.7 14 12C14 15.3 11.3 18 8 18C4.7 18 2 15.3 2 12H0C0 16.4 3.6 20 8 20C12.4 20 16 16.4 16 12C16 7.6 12.4 4 8 4Z" fill="#5C6870"/>
+                    </svg>
+                    <img class="video__scroll" src="img/scroll-mobile.svg" width="235" height="13" alt="Прокрутка видео">
+                    <svg class="video__subtitles" width="32" height="20" viewBox="0 0 32 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M29 0H3C1.3 0 0 1.3 0 3V17C0 18.7 1.3 20 3 20H29C30.7 20 32 18.7 32 17V3C32 1.3 30.7 0 29 0ZM14.4 15.9C13.9 16 13.3 16 12.7 16C12 16 11.3 15.9 10.7 15.7C10.1 15.5 9.5 15.1 9.1 14.7C8.7 14.3 8.3 13.6 8 12.8C7.7 12 7.6 11.1 7.6 10C7.6 8.9 7.8 7.9 8.1 7.1C8.4 6.3 8.8 5.7 9.3 5.2C9.8 4.7 10.4 4.4 11 4.2C11.5 4.1 12.2 4 12.8 4C13.5 4 14 4 14.5 4.1C15 4.2 15.3 4.3 15.6 4.4L15.2 6.3C14.9 6.2 14.6 6.1 14.3 6C13.9 6 13.5 6 13 6C12.1 6 11.4 6.3 10.8 7C10.2 7.7 10 8.7 10 10C10 10.6 10.1 11.1 10.2 11.6C10.3 12.1 10.5 12.5 10.8 12.9C11.1 13.2 11.4 13.5 11.8 13.7C12.2 13.9 12.7 14 13.2 14C13.7 14 14.1 14 14.5 13.9C14.8 13.8 15.1 13.7 15.4 13.5L15.9 15.3C15.4 15.6 14.9 15.7 14.4 15.9ZM23.1 15.9C22.6 16 22 16 21.4 16C20.7 16 20 15.9 19.4 15.7C18.8 15.5 18.2 15.1 17.8 14.7C17.3 14.2 16.9 13.6 16.7 12.8C16.4 12 16.3 11.1 16.3 10C16.3 8.9 16.5 7.9 16.8 7.1C17.1 6.3 17.5 5.7 18 5.2C18.5 4.7 19.1 4.4 19.7 4.2C20.2 4.1 20.9 4 21.5 4C22.2 4 22.7 4 23.2 4.1C23.7 4.2 24 4.3 24.3 4.4L23.9 6.3C23.6 6.2 23.3 6.1 23 6C22.6 6 22.2 6 21.7 6C20.8 6 20.1 6.3 19.5 7C18.9 7.7 18.7 8.7 18.7 10C18.7 10.6 18.8 11.1 18.9 11.6C19 12.1 19.2 12.5 19.5 12.9C19.8 13.2 20.1 13.5 20.5 13.7C20.9 13.9 21.4 14 21.9 14C22.4 14 22.8 14 23.2 13.9C23.5 13.8 23.8 13.7 24.1 13.5L24.6 15.3C24.1 15.6 23.6 15.7 23.1 15.9Z" fill="#5C6870"/>
+                    </svg>
+                    <svg class="video__fullscreen" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0V3V6H3V3H6V0H3H0Z" fill="#5C6870"/>
+                      <path d="M3 14H0V17V20H3H6V17H3V14Z" fill="#5C6870"/>
+                      <path d="M17 0H14V3H17V6H20V3V0H17Z" fill="#5C6870"/>
+                      <path d="M17 17H14V20H17H20V17V14H17V17Z" fill="#5C6870"/>
+                      </svg>
+                </div>
+            </div>
         </section>
     </main>
 
     <footer class="page-footer">
         <h2 class="visually-hidden">Футер сайта</h2>
-        <a class="footer-text" href="#">&#35;Visitsedona</a>
+        <a class="page-footer__text" href="#">&#35;Visitsedona</a>
 
         <section class="page-footer__social">
             <h2 class="visually-hidden">Давайте дружить!</h2>
             <a class="social-link" href="https://twitter.com/?lang=ru" target="_blank">
-                <img class="social-link__icon" src="img/icon-twitter.svg" width="18" height="15" alt="Иконка twitter">
+                <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M11.3 0.166728C13 -0.333272 14.4 0.366728 15 1.26673C15.7 1.06673 16.4 0.766728 17.1 0.566728C17.1 1.36673 16.6 2.06673 16.2 2.26673C16.9 2.46673 17.5 1.76673 17.5 1.76673C17.3 2.76673 16.5 3.46673 15.9 3.76673C15.7 10.3667 12.6 14.7667 5.5 14.5667C5 14.5667 5.6 14.5667 5 14.5667C4.6 14.5667 0.7 14.1667 0 12.7667C2.3 12.9667 4 12.3667 4.8 11.6667C3.8 11.3667 2 11.1667 1.7 8.76673C2.1 8.86673 2.3 8.96673 3 8.86673C1.8 8.06673 0.4 7.36673 0.5 5.16673C0.8 5.46673 1.6 5.66673 1.9 5.66673C1.2 5.46673 -0.1 2.36673 1 0.866728C2.9 2.66673 4.8 4.36673 8.4 4.56673C8.5 2.26673 9.5 0.766728 11.3 0.166728Z" fill="white"/>
+              </svg>
             </a>
             <a class="social-link" href="https://www.facebook.com/" target="_blank">
-                <img class="social-link__icon" src="img/icon-facebook.svg" width="9" height="19" alt="Иконка facebook">
+                <svg width="9" height="19" viewBox="0 0 9 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M6.3 3.4C7.1 3.4 7.9 3.4 8.7 3.4C8.7 2.3 8.7 1.2 8.7 0C7.7 0 6.8 0 5.8 0C2.7 0.2 1.5 2.4 1.9 6.1H0V9.6H2C2 12.7 2 15.8 2 18.9C3.3 18.9 4.6 18.9 5.8 18.9C5.8 15.8 5.8 12.7 5.8 9.6H8.7V6.1H5.8C5.8 5.1 5.8 3.7 6.3 3.4Z" fill="white"/>
+              </svg>
             </a>
             <a class="social-link" href="https://www.youtube.com/" target="_blank">
-                <img class="social-link__icon" src="img/icon-youtube.svg" width="20" height="14" alt="Иконка youtube">
+                <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M17.1 0H2.8C1.3 0 0 1.3 0 2.8V11.1C0 12.7 1.3 14 2.8 14H17.1C18.7 14 19.9 12.7 19.9 11.2V2.8C20 1.3 18.7 0 17.1 0ZM7 10.4V3.6L13.8 7L7 10.4Z" fill="white"/>
+              </svg>
             </a>
         </section>
 
@@ -144,7 +195,9 @@
             <h2 class="visually-hidden">Копирайт сайта!</h2>
             <p class="page-copyright__text">Разработано</p>
             <a class="page-copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-                <img class="page-copyright__icon" src="img/icon-copyright.svg" width="27" height="34" alt="Картинка копирайта">
+                <svg width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z" fill="black"/>
+              </svg>
             </a>
         </section>
     </footer>
