--- a/source/form.html
+++ b/source/form.html
@@ -10,11 +10,11 @@
 
 <body class="page__body page__body-inner">
     <header class="page-header">
-        <div class="help">
+        <div class="page-header__top">
             <a class="page-header__logo" href="index.html">
                 <img src="img/logotype-mobile.png" alt="Главный логотип">
             </a>
-            <nav class="main-nav main-nav--closed">
+            <nav class="main-nav main-nav--opened">
                 <button class="main-nav__toggle" type="button">
                 <span class="visually-hidden">Открыть меню</span>
             </button>
@@ -37,17 +37,17 @@
             </nav>
         </div>
 
-        <section class="header-content header-content__inner">
+        <section class="header-content header-inner">
             <h2 class="visually-hidden">Welcome to the gardeous Sedona</h2>
-            <img class="header-content__inner-img" src="img/sedona.svg" width="229" height="39" alt="sedona">
+            <img class="header-inner__img" src="img/sedona.svg" width="229" height="39" alt="sedona">
         </section>
     </header>
 
     <main class="page-main form-main">
         <h1 class="visually-hidden">Страница формы</h1>
-        <header class="page-main__header">
-            <h3 class="page-main__header-heading">Оставьте свой отзыв</h3>
-            <p class="page-main__header-text">Помогите нашим отелям стать лучше!Оставьте отзыв о них,а также о посещенных вами достопримечательностях</p>
+        <header class="main-header">
+            <h3 class="main-header__heading">Оставьте свой отзыв</h3>
+            <p class="main-header__text">Помогите нашим отелям стать лучше! Оставьте отзыв о них,<br>а также о посещенных вами достопримечательностях</p>
         </header>
         <form class="page-form" action="https://echo.htmlacademy.ru" method="GET">
             <fieldset class="page-form__section presents-section">
@@ -68,7 +68,7 @@
             <fieldset class="page-form__section contact-section">
                 <legend class="page-form__section-legend">Контактная информация:</legend>
                 <div class="fieldset-line contact-section__line">
-                    <label class="contact-section__label" for="phone">Контактный телефон<sup>*</sup>:</label>
+                    <label class="contact-section__label" for="phone"><span>Контактный</span> телефон<sup>*</sup>:</label>
                     <div class="contact-section__input-content">
                         <input class="fieldset-line__input contact-section__input contact-section__input-phone" id="phone" type="tel" name="phone" required placeholder="Введите телефон">
                         <div class="contact-section__icon-content">
@@ -104,7 +104,7 @@
                 </div>
             </fieldset>
             <fieldset class="page-form__section filter-checkbox">
-                <legend class="page-form__section-legend">посещенные достопримечательности:</legend>
+                <legend class="page-form__section-legend">Посещенные<br> достопримечательности:</legend>
                 <div class="filter-checkbox__content">
                     <div class="filter-checkbox__item">
                         <input class="filter-checkbox__input visually-hidden" id="bridge" type="checkbox" name="Devil Bridge">
@@ -129,23 +129,30 @@
                 <textarea class="textarea-section__text" name="emotions" placeholder="Опишите подробно все свои восторги"></textarea>
             </fieldset>
             <button class="button page-form__button" type="submit">Отправить отзыв</button>
+            <p class="warning">* - Обязятельные поля</p>
         </form>
     </main>
 
     <footer class="page-footer">
         <h2 class="visually-hidden">Футер сайта</h2>
-        <a class="footer-text" href="#">&#35;Visitsedona</a>
+        <a class="page-footer__text" href="#">&#35;Visitsedona</a>
 
         <section class="page-footer__social">
             <h2 class="visually-hidden">Давайте дружить!</h2>
             <a class="social-link" href="https://twitter.com/?lang=ru" target="_blank">
-                <img class="social-link__icon" src="img/icon-twitter.svg" width="18" height="15" alt="Иконка twitter">
+                <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M11.3 0.166728C13 -0.333272 14.4 0.366728 15 1.26673C15.7 1.06673 16.4 0.766728 17.1 0.566728C17.1 1.36673 16.6 2.06673 16.2 2.26673C16.9 2.46673 17.5 1.76673 17.5 1.76673C17.3 2.76673 16.5 3.46673 15.9 3.76673C15.7 10.3667 12.6 14.7667 5.5 14.5667C5 14.5667 5.6 14.5667 5 14.5667C4.6 14.5667 0.7 14.1667 0 12.7667C2.3 12.9667 4 12.3667 4.8 11.6667C3.8 11.3667 2 11.1667 1.7 8.76673C2.1 8.86673 2.3 8.96673 3 8.86673C1.8 8.06673 0.4 7.36673 0.5 5.16673C0.8 5.46673 1.6 5.66673 1.9 5.66673C1.2 5.46673 -0.1 2.36673 1 0.866728C2.9 2.66673 4.8 4.36673 8.4 4.56673C8.5 2.26673 9.5 0.766728 11.3 0.166728Z" fill="white"/>
+              </svg>
             </a>
             <a class="social-link" href="https://www.facebook.com/" target="_blank">
-                <img class="social-link__icon" src="img/icon-facebook.svg" width="9" height="19" alt="Иконка facebook">
+                <svg width="9" height="19" viewBox="0 0 9 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M6.3 3.4C7.1 3.4 7.9 3.4 8.7 3.4C8.7 2.3 8.7 1.2 8.7 0C7.7 0 6.8 0 5.8 0C2.7 0.2 1.5 2.4 1.9 6.1H0V9.6H2C2 12.7 2 15.8 2 18.9C3.3 18.9 4.6 18.9 5.8 18.9C5.8 15.8 5.8 12.7 5.8 9.6H8.7V6.1H5.8C5.8 5.1 5.8 3.7 6.3 3.4Z" fill="white"/>
+              </svg>
             </a>
             <a class="social-link" href="https://www.youtube.com/" target="_blank">
-                <img class="social-link__icon" src="img/icon-youtube.svg" width="20" height="14" alt="Иконка youtube">
+                <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M17.1 0H2.8C1.3 0 0 1.3 0 2.8V11.1C0 12.7 1.3 14 2.8 14H17.1C18.7 14 19.9 12.7 19.9 11.2V2.8C20 1.3 18.7 0 17.1 0ZM7 10.4V3.6L13.8 7L7 10.4Z" fill="white"/>
+              </svg>
             </a>
         </section>
 
@@ -153,22 +160,12 @@
             <h2 class="visually-hidden">Копирайт сайта!</h2>
             <p class="page-copyright__text">Разработано</p>
             <a class="page-copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-                <img class="page-copyright__icon" src="img/icon-copyright.svg" width="27" height="34" alt="Картинка копирайта">
+                <svg width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z" fill="black"/>
+              </svg>
             </a>
         </section>
     </footer>
-
-    <section class="modal modal-failure">
-        <h2 class="modal__heading">Что-то пошло не так!</h2>
-        <p class="modal__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-        <button class="modal__button">ok</button>
-    </section>
-
-    <section class="modal modal-success">
-        <h2 class="modal__heading">Ваш отзыв отправлен!</h2>
-        <p class="modal__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
-        <button class="modal__button">Закрыт окно</button>
-    </section>
 </body>
 
 </html>
