--- a/source/index.html
+++ b/source/index.html
@@ -4,20 +4,36 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="favicon.ico">
     <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Седона</title>
 </head>
 
 <body class="page__body">
+    <svg style="display: none">
+        <symbol id="icon-twitter" viewBox="0 0 18 15">
+            <path d="M11.3 0.166728C13 -0.333272 14.4 0.366728 15 1.26673C15.7 1.06673 16.4 0.766728 17.1 0.566728C17.1 1.36673 16.6 2.06673 16.2 2.26673C16.9 2.46673 17.5 1.76673 17.5 1.76673C17.3 2.76673 16.5 3.46673 15.9 3.76673C15.7 10.3667 12.6 14.7667 5.5 14.5667C5 14.5667 5.6 14.5667 5 14.5667C4.6 14.5667 0.7 14.1667 0 12.7667C2.3 12.9667 4 12.3667 4.8 11.6667C3.8 11.3667 2 11.1667 1.7 8.76673C2.1 8.86673 2.3 8.96673 3 8.86673C1.8 8.06673 0.4 7.36673 0.5 5.16673C0.8 5.46673 1.6 5.66673 1.9 5.66673C1.2 5.46673 -0.1 2.36673 1 0.866728C2.9 2.66673 4.8 4.36673 8.4 4.56673C8.5 2.26673 9.5 0.766728 11.3 0.166728Z" fill="white"/>
+        </symbol>
+        <symbol id="icon-facebook" viewBox="0 0 9 19">
+            <path d="M6.3 3.4C7.1 3.4 7.9 3.4 8.7 3.4C8.7 2.3 8.7 1.2 8.7 0C7.7 0 6.8 0 5.8 0C2.7 0.2 1.5 2.4 1.9 6.1H0V9.6H2C2 12.7 2 15.8 2 18.9C3.3 18.9 4.6 18.9 5.8 18.9C5.8 15.8 5.8 12.7 5.8 9.6H8.7V6.1H5.8C5.8 5.1 5.8 3.7 6.3 3.4Z" fill="white"/>
+        </symbol>
+        <symbol id="icon-youtube" veiwBox="0 0 20 14">
+          <path d="M17.1 0H2.8C1.3 0 0 1.3 0 2.8V11.1C0 12.7 1.3 14 2.8 14H17.1C18.7 14 19.9 12.7 19.9 11.2V2.8C20 1.3 18.7 0 17.1 0ZM7 10.4V3.6L13.8 7L7 10.4Z" fill="white"/>
+        </symbol>
+        <symbol id="icon-copyright" veiwBox="0 0 27 35">
+          <path d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z" fill="black"/>
+        </symbol>
+    </svg>
+
     <header class="page-header">
-        <div class="help">
+        <div class="page-header__top">
             <a class="page-header__logo" href="index.html">
                 <img src="img/logotype-mobile.png" alt="Главный логотип">
             </a>
             <nav class="main-nav main-nav--closed">
                 <button class="main-nav__toggle" type="button">
-                <span class="visually-hidden">Открыть меню</span>
-            </button>
+                    <span class="visually-hidden">Открыть меню</span>
+                </button>
                 <div class="main-nav__wrapper">
                     <ul class="main-nav__list site-list">
                         <li class="site-list__item site-list__item--current">
@@ -47,9 +63,9 @@
 
     <main class="page-main">
         <h1 class="visually-hidden">Туристический город Седона</h1>
-        <header class="page-main__header">
-            <h3 class="page-main__header-heading page-main__header-heading">Седона - небольшой городок в Аризоне, заслуживающий большего!</h3>
-            <p class="page-main__header-text">Рассмотрим 5 причин,по которым Седона круче,чем Гранд Каньон!</p>
+        <header class="main-header">
+            <h3 class="main-header__heading">Седона - небольшой городок в Аризоне, заслуживающий большего!</h3>
+            <p class="main-header__text">Рассмотрим 5 причин,по которым Седона круче,чем Гранд Каньон!</p>
         </header>
         <section class="advantages">
             <h2 class="visually-hidden">Наши преимущества</h2>
@@ -57,7 +73,7 @@
                 <header class="advantages-section__header">
                     <div class="advantages-section__header-content advantages-section__header-content-lightblue">
                         <h3 class="advantages-section__header-heading">Настоящий городок</h3>
-                        <p class="advantages-section__header-text  advantages-section__header-number">№1</p>
+                        <p class="advantages-section__header-text  advantages-section__header-text--number">№1</p>
                         <p class="advantages-section__header-text">Седона не аттракцион для туристов, там течет своя жизнь</p>
                     </div>
                     <picture>
@@ -154,18 +170,39 @@
 
     <footer class="page-footer">
         <h2 class="visually-hidden">Футер сайта</h2>
-        <a class="footer-text" href="#">&#35;Visitsedona</a>
+        <a class="page-footer__text" href="#">&#35;Visitsedona</a>
 
         <section class="page-footer__social">
             <h2 class="visually-hidden">Давайте дружить!</h2>
             <a class="social-link" href="https://twitter.com/?lang=ru" target="_blank">
-                <img class="social-link__icon" src="img/icon-twitter.svg" width="18" height="15" alt="Иконка twitter">
+                <!--
+                  <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M11.3 0.166728C13 -0.333272 14.4 0.366728 15 1.26673C15.7 1.06673 16.4 0.766728 17.1 0.566728C17.1 1.36673 16.6 2.06673 16.2 2.26673C16.9 2.46673 17.5 1.76673 17.5 1.76673C17.3 2.76673 16.5 3.46673 15.9 3.76673C15.7 10.3667 12.6 14.7667 5.5 14.5667C5 14.5667 5.6 14.5667 5 14.5667C4.6 14.5667 0.7 14.1667 0 12.7667C2.3 12.9667 4 12.3667 4.8 11.6667C3.8 11.3667 2 11.1667 1.7 8.76673C2.1 8.86673 2.3 8.96673 3 8.86673C1.8 8.06673 0.4 7.36673 0.5 5.16673C0.8 5.46673 1.6 5.66673 1.9 5.66673C1.2 5.46673 -0.1 2.36673 1 0.866728C2.9 2.66673 4.8 4.36673 8.4 4.56673C8.5 2.26673 9.5 0.766728 11.3 0.166728Z" fill="white"/>
+                  </svg>
+                -->
+                <svg width="18" height="15">
+                    <use xlink:href="#icon-twitter"></use>
+                </svg>
             </a>
             <a class="social-link" href="https://www.facebook.com/" target="_blank">
-                <img class="social-link__icon" src="img/icon-facebook.svg" width="9" height="19" alt="Иконка facebook">
+                <!--
+                <svg width="9" height="19" viewBox="0 0 9 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6.3 3.4C7.1 3.4 7.9 3.4 8.7 3.4C8.7 2.3 8.7 1.2 8.7 0C7.7 0 6.8 0 5.8 0C2.7 0.2 1.5 2.4 1.9 6.1H0V9.6H2C2 12.7 2 15.8 2 18.9C3.3 18.9 4.6 18.9 5.8 18.9C5.8 15.8 5.8 12.7 5.8 9.6H8.7V6.1H5.8C5.8 5.1 5.8 3.7 6.3 3.4Z" fill="white"/>
+                </svg>
+              -->
+                <svg width="9" height="19">
+                  <use xlink:href="#icon-facebook"></use>
+                </svg>
             </a>
             <a class="social-link" href="https://www.youtube.com/" target="_blank">
-                <img class="social-link__icon" src="img/icon-youtube.svg" width="20" height="14" alt="Иконка youtube">
+                <!--
+                <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M17.1 0H2.8C1.3 0 0 1.3 0 2.8V11.1C0 12.7 1.3 14 2.8 14H17.1C18.7 14 19.9 12.7 19.9 11.2V2.8C20 1.3 18.7 0 17.1 0ZM7 10.4V3.6L13.8 7L7 10.4Z" fill="white"/>
+                </svg>
+              -->
+                <svg width="20" height="14">
+                  <use xlink:href="#icon-youtube"></use>
+                </svg>
             </a>
         </section>
 
@@ -173,7 +210,14 @@
             <h2 class="visually-hidden">Копирайт сайта!</h2>
             <p class="page-copyright__text">Разработано</p>
             <a class="page-copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-                <img class="page-copyright__icon" src="img/icon-copyright.svg" width="27" height="34" alt="Картинка копирайта">
+                <!--
+                <svg width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z" fill="black"/>
+                </svg>
+              -->
+                <svg class="icon-copyright" width="27" height="35">
+                  <use xlink:href="#icon-copyright"></use>
+                </svg>
             </a>
         </section>
     </footer>
