--- a/source/form.html
+++ b/source/form.html
@@ -68,7 +68,7 @@
         <h1 class="visually-hidden">Страница формы</h1>
         <header class="main-header">
             <h3 class="main-header__heading">Оставьте свой отзыв</h3>
-            <p class="main-header__text">Помогите нашим отелям стать лучше! Оставьте отзыв о них,<br>а также о посещенных вами достопримечательностях</p>
+            <p class="main-header__text">Помогите нашим отелям стать лучше! Оставьте отзыв о них,<br>&nbsp;а также о посещенных вами достопримечательностях</p>
         </header>
         <form class="page-form" action="https://echo.htmlacademy.ru" method="GET">
             <fieldset class="page-form__section presents-section">
