--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
                     <img src="img/logotype-mobile.svg" width="102" height="84" alt="Главный логотип">
                 </picture>
             </a>
-            <nav class="main-nav main-nav--closed">
+            <nav class="main-nav main-nav--opened">
                 <button class="main-nav__toggle" type="button">
                     <span class="visually-hidden">Открыть меню</span>
                 </button>
