--- a/source/form.html
+++ b/source/form.html
@@ -199,6 +199,7 @@
         <p class="modal__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам.<br>В ближайшее время мы опубликуем его на сайте.</p>
         <button class="modal__button">Закрыть окно</button>
     </section>
+    <script src="js/script.min.js"></script>
 </body>
 
 </html>
